tests/lean/export1.lean.expected.out
gcd : ℕ → ℕ → ℕ
export1.lean:8:6: error: unknown identifier 'gcd'
gcd : ℕ → ℕ → ℕ
export1.lean:14:6: error: unknown identifier 'gcd'
export1.lean:17:9: error: unknown identifier 'gcd'
gcd : ℕ → ℕ → ℕ
gcd : ℕ → ℕ → ℕ
export1.lean:27:6: error: unknown identifier 'gcd'
gcd : ℕ → ℕ → ℕ
export1.lean:34:6: error: unknown identifier 'gcd'
gcd
gcd : ℕ → ℕ → ℕ
